<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile"
    tools:context=".Show_Profile">

    <ImageView
        android:id="@+id/scan_qr"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/scan_qr"
        android:src="@drawable/scan_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Spinner
        android:id="@+id/change_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:entries="@array/list_type_user"
        android:gravity="center_horizontal"

        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scan_qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />


    <ImageView
        android:id="@+id/option"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="Option"
        android:src="@drawable/option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/photo_profile"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:contentDescription="@string/fotoProfile"
        android:scaleType="centerInside"
        android:src="@drawable/ikon_fotoprofile"
        app:civ_border_color="@color/light_grey"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.398" />


    <TextView
        android:id="@+id/username_on_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/username"
        android:textColor="@color/grey"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/button_edit_fotoProfile"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:background="@drawable/tab"
        android:fontFamily="@font/bold"
        android:text="Change Photo Profile"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/email_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_on_profile"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="19dp"
        android:layout_height="13dp"
        android:contentDescription="@string/password_icon"
        android:src="@drawable/password_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_icon"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/email_on_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/someoneEmail"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <TextView
        android:id="@+id/password_on_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/someonePassword"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/Reveal_Password"
        android:layout_width="100dp"
        android:layout_height="20sp"
        android:background="@drawable/tab"
        android:fontFamily="@font/bold"
        android:text="Show Password"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <Button
        android:id="@+id/Hide_Password"
        android:layout_width="100dp"
        android:layout_height="20sp"
        android:background="@drawable/tab"
        android:fontFamily="@font/bold"
        android:text="Hide Password"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:background="@drawable/button_redtext"
        android:fontFamily="@font/bold"
        android:text="Change Password"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <LinearLayout
        android:id="@+id/tab_on_profile"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tab"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79">

        <ImageButton
            android:id="@+id/recent_place"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/recent_place"
            android:background="@color/white"
            android:tint="@color/Black"
            />

        <ImageButton
            android:id="@+id/covid_test_result"
            android:src="@drawable/covid_test_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            style="@android:style/ButtonBar"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



